--- a/Mean_Field.ipynb
+++ b/Mean_Field.ipynb
@@ -163,7 +163,7 @@
     "    def H_l_u_1(self, q_s, p_s):\n",
     "        return 1\n",
     "    \n",
-    "    def H_l(self, q_s, p_l, lambda_l, u_s):\n",
+    "    def H_l(self, q_s, p_l, u_s, lambda_l):\n",
     "        # used in \"Construct local Hamiltonian of agent i\"\n",
     "        H_l = self.H_l_nou(q_s, p_l, lambda_l)\n",
     "        H_l = H_l + self.H_l_u_1(q_s, p_s)*u_s[0]\n",
@@ -385,7 +385,7 @@
     "        return np.array([0])\n",
     "\n",
     "    def q_rhs_H_l(self, q_s, p_l, u_s, lambda_l):\n",
-    "        q_rhs_H_l_u = self.q_rhs_H_l_u(q_s, p_l, u_s, lambda_l)\n",
+    "        q_rhs_H_l_u = self.q_rhs_H_l_u(q_s, p_l)\n",
     "        q_rhs_H_l_u_summed = sum([q_rhs_H_l_u[i]*u_s[i] for i in range(len(u_s))])\n",
     "        return self.q_rhs_H_l_nou(q_s, p_l, lambda_l) + q_rhs_H_l_u_summed\n",
     "\n",
@@ -395,7 +395,7 @@
     "        p_H_l_dot = self.q_rhs_H_l(q_s, p_l, u_s, lambda_l)\n",
     "        return np.concatenate([q_H_l_dot, p_H_l_dot])\n",
     "\n",
-    "    def q_rhs_H_l_u(self, q_s, p_l, u_s, lambda_l):\n",
+    "    def q_rhs_H_l_u(self, q_s, p_l):\n",
     "        # this must be 2D array, so wrap it in np.array\n",
     "        q_rhs_H_l_u = np.array([q_s])\n",
     "        return q_rhs_H_l_u\n",
@@ -410,7 +410,7 @@
     "        p_rhs_H_l_u_summed = sum([p_rhs_H_l_u[i]*u_s[i] for i in range(len(u_s))])\n",
     "        return self.p_rhs_H_l_nou(q_s, p_l, lambda_l) + p_rhs_H_l_u_summed\n",
     "\n",
-    "    def p_rhs_H_l_u(self, q_s, p_l, u_s, lambda_l):\n",
+    "    def p_rhs_H_l_u(self, q_s, p_l):\n",
     "        # this must be 2D array, so wrap it in np.array\n",
     "        p_rhs_H_l_u = np.array([q_s])\n",
     "        return p_rhs_H_l_u\n",
@@ -485,7 +485,7 @@
     "        p_mf = qp_vec[2*state_dim:]\n",
     "        \n",
     "        # don't have q_s_dot, q_mf_dot, or p_mf_dot\n",
-    "        def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j):\n",
+    "        def Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j):\n",
     "            Beta_mf=[]\n",
     "            Beta_l=[]\n",
     "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
@@ -495,18 +495,19 @@
     "            for k in range(len(self.control_indices)):\n",
     "                Beta_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) + \\\n",
     "                            H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
-    "                Beta_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[k], p_mf_dot)) + \\\n",
-    "                           H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_mf, p_mf, u_s, lambda_l)[j], p_mf_dot))\n",
+    "                Beta_l_k = H_l_u[j]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[k], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[k], p_mf_dot)) + \\\n",
+    "                           H_l_u[k]*(np.dot(self.q_rhs_H_l_u(q_s, p_l)[j], q_s_dot) + np.dot(self.p_rhs_H_l_u(q_s, p_l)[j], p_mf_dot))\n",
     "                    \n",
     "                Beta_mf.append(Beta_mf_k)\n",
     "                Beta_l.append(Beta_l_k)\n",
     "            return Beta_mf, Beta_l\n",
     "                \n",
-    "        def alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j):\n",
+    "        def alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j):\n",
     "            alpha_mf = []\n",
     "            alpha_l = []\n",
     "            H_mf_u = self.H_MF_u(q_mf, p_mf)\n",
     "            H_l_u = self.H_l_u(q_s, p_l)\n",
+    "            j=j-1\n",
     "            for k in range(len(self.control_indices)):\n",
     "                alpha_mf_k = H_mf_u[j]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[k], p_mf_dot)) +\\\n",
     "                            H_mf_u[k]*(np.dot(self.q_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], q_s_dot) + np.dot(self.p_rhs_H_mf_u(p_mf, q_mf, u_mf)[j], p_mf_dot))\n",
@@ -517,9 +518,10 @@
     "            return alpha_mf, alpha_l\n",
     "                \n",
     "        for j in self.control_indices:\n",
-    "            Beta_mf, Beta_l = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j)\n",
-    "            alpha_mf, alpha_l = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, j)\n",
+    "            Beta_mf, Beta_l = Beta_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j)\n",
+    "            alpha_mf, alpha_l = alpha_j(self, q_mf, p_mf, u_mf, u_s, q_s_dot, q_mf_dot, p_mf_dot, q_s, p_l, j)\n",
     "\n",
+    "        print 'first, check to ensure that dimensions make sense, then make sure that '\n",
     "        return -1*self.Gamma*(self.gamma(self.alpha_mf_k))\n",
     "\n",
     "\n",
@@ -1154,15 +1156,15 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "alpha_j() takes exactly 9 arguments (8 given)",
+     "ename": "AttributeError",
+     "evalue": "Agent2 instance has no attribute 'alpha_mf_k'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-23-ef3a44552add>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmyAgent2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mu_rhs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmyAgent2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstate_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mGamma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmyAgent2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGamma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mqp_vec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mqp_vec\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mu_0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp_l_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mp_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mu_mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-4-3e81585c7d2b>\u001b[0m in \u001b[0;36mu_rhs\u001b[0;34m(self, t, u_vec, **kwargs)\u001b[0m\n\u001b[1;32m    200\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontrol_indices\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m             \u001b[0mBeta_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBeta_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mBeta_j\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 202\u001b[0;31m             \u001b[0malpha_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malpha_j\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    203\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    204\u001b[0m         \u001b[0;32mreturn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: alpha_j() takes exactly 9 arguments (8 given)"
+      "\u001b[0;32m<ipython-input-4-f618a528d19b>\u001b[0m in \u001b[0;36mu_rhs\u001b[0;34m(self, t, u_vec, **kwargs)\u001b[0m\n\u001b[1;32m    204\u001b[0m             \u001b[0malpha_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malpha_l\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0malpha_j\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mu_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_mf_dot\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mq_s\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mp_l\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mj\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    205\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 206\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGamma\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0malpha_mf_k\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    207\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    208\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: Agent2 instance has no attribute 'alpha_mf_k'"
      ]
     }
    ],
